# Azil-Game-Engine-AGE

./: CMakeLists.txt  README.md  cppcheck_report.txt  imgui.ini  main.cpp  project_maker.cpp  project_maker.h
distr/: CMakeLists.txt
engine_ui/imgui/: imgui_impl_glfw.cpp
node_system/: node_manager.h
renderer/: mesh.h  render_api.cpp  render_api.h  render_logic.cpp  render_logic.h  window.cpp  window.h
renderer/opengl/: glad.c  mesh.h  opengl_renderer.cpp  opengl_renderer.h
renderer/opengl/glad/: glad.h
resources/: mesh_importer.cpp  mesh_importer.h
test/: untitled.fbx
